--- a/Insurance-app-main/src/Components/AdminDashboard/AdminRegistration/Updateform/userattendance.css
+++ b/Insurance-app-main/src/Components/AdminDashboard/AdminRegistration/Updateform/userattendance.css
@@ -197,12 +197,25 @@
     margin-top: 50px;
     height: 100%;
   }
-
-  @media only screen and (min-width:320px) and (max-width:426px) 
+  .entry{
+    text-align: center;
+  }
+  .attend-portel
+  {
+    border: 1.5px solid navy;
+    background-color: #dfe3e8;
+  }
+ .button-gap
+ {
+  gap:3px
+ }
+  @media only screen and (min-width:320px) and (max-width:375px) 
   {
     .employee-attendance {
       display: flex;
       flex-direction: column;
+      width: 100%;
+      margin:65px;
      }
      
   .reason-modal {
@@ -225,15 +238,76 @@
    
   }
 
+
   }
-  @media only screen and (min-width:426.1px) and (max-width:768px) 
+  @media only screen and (min-width:375.1px) and (max-width:425px) 
   {
-    .reason-modal {
-      position: fixed;
-      margin-left: 180px;
-      margin-top: 80px;
-      width: 600px;
-      height:300px;
-      border-radius: 15px;
+    .employee-attendance {
+      display: flex;
+      flex-direction: column;
+      width: 100%;
+      margin:30px;
+     }
     }
+  @media only screen and (min-width:425.1px) and (max-width:768px) 
+  {
+    .employee-attendance {
+      display: flex;
+      flex-direction: column;
+      width: 100%;
+      margin:20px;
+    
+    }
+     
+  .reason-modal {
+    position: fixed;
+    margin-left:3px;
+    margin-top: 120px;
+    width: 320px;
+    height:300px;
+   }
+  .attendance-present,
+  .attendance-absent {
+    padding: 5px 10px;
+    font-size: 15px;
+    margin: 4px;
+    border: none;
+    border-radius: 8px;
+    cursor: pointer;
+    font-weight: 600;
+    width: 80px;
+   
+  }
+
+  }
+  @media only screen and (min-width:768.1px) and (max-width:1024px) 
+  {
+    .employee-attendance {
+      display: flex;
+      justify-content: space-between;
+      align-items: center;
+      padding: 20px 25px;
+    
+    }
+     
+  .reason-modal {
+    position: fixed;
+    margin-left:3px;
+    margin-top: 120px;
+    width: 320px;
+    height:300px;
+   }
+  .attendance-present,
+  .attendance-absent {
+    padding: 5px 10px;
+    font-size: 15px;
+    margin: 4px;
+    border: none;
+    border-radius: 8px;
+    cursor: pointer;
+    font-weight: 600;
+    width: 80px;
+   
+  }
+
   }
