--- a/Insurance-app-main/src/Components/AdminDashboard/Attendance/attendance.css
+++ b/Insurance-app-main/src/Components/AdminDashboard/Attendance/attendance.css
@@ -2,7 +2,7 @@
   margin-top: 50px;
 }
 
-.calendar{
+.calendar {
   display: flex;
   justify-content: center;
   align-items: center;
@@ -10,29 +10,29 @@
   background-color: #ffffff;
   border-radius: 8px;
   box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
-  max-width: 300px; 
+  max-width: 300px;
   max-height: 320px;
   position: absolute;
-  top: 60px;
+  top: 70px;
   right: 10px;
   z-index: 1000;
 }
 
-.calender-btn{
+.calender-btn {
   padding: 5px 15px;
   border-radius: 5px;
-  background-color: rgb(3, 3, 178);
-  color: white;
+  background-color: #023265;
+  color: #fff;
   border: none;
   transition: transform 0.3s ease, background-color 0.3s ease;
 }
 
-.calender-btn:hover{
-  background-color: rgb(2, 2, 195);
+.calender-btn:hover {
+  background-color: #023c7a;
   transform: scale(1.05);
 }
 
-.attendance-header-container{
+.attendance-header-container {
   padding: 20px;
 }
 
@@ -51,39 +51,15 @@
   font-size: 1.2rem;
 }
 
-.attend-1 {
-  width: 100%;
-  border-collapse: separate;
-  border-radius: 10px;
-  overflow: hidden;
-  border-spacing: 0;
-}
-
-.attend-1 th, .attend-1 td {
-  padding: 12px;
-  text-align: left;
-  border-bottom: 1px solid #E5E7EB;
-}
-
-.attend-1 th {
-  background-color: #F3F4F6;
-  font-weight: 600;
-}
-
 .calendar-container {
   margin: 20px 0;
   display: flex;
   justify-content: center;
 }
 
-
-.attend-1 td:last-child {
-  font-weight: 500;
-  text-transform: capitalize;
-}
 .admin-header-attendance {
   display: flex;
-  align-items: center !important;
+  align-items: center;
   justify-content: space-between;
   justify-content: flex-end;
   margin: auto;
@@ -111,77 +87,76 @@
 
 .attendance-header .upload-button5,
 .attendance-header .upload-button6 {
-    color: #828181;
-    padding: 3px 7px;
-    border-radius: 5px;
-    cursor: pointer;
+  color: #828181;
+  padding: 3px 7px;
+  border-radius: 5px;
+  cursor: pointer;
 }
 
 .upload-button5 {
-    border:1px solid #27ae60;
-    transition: transform 0.5s ease,color 0.5s ease;
-    background-color: white;
+  border: 1px solid #27ae60;
+  transition: transform 0.5s ease, color 0.5s ease;
+  background-color: white;
 }
 
 .upload-button6 {
-    border:1px solid #e67e22;
-    transition: transform 0.5s ease,color 0.5s ease;
-    background-color: white;
+  border: 1px solid #e67e22;
+  transition: transform 0.5s ease, color 0.5s ease;
+  background-color: white;
 }
 
-.upload-button5:hover{
-    transform: scale(1.05);
-    background-color: rgba(0,128,0,0.8);
+.upload-button5:hover {
+  transform: scale(1.05);
+  background-color: rgba(0, 128, 0, 0.8);
 }
 
-.upload-button5:hover .excel-icon-attendance{
-    color: whitesmoke;
+.upload-button5:hover .excel-icon-attendance {
+  color: whitesmoke;
 }
 
 .upload-button6:hover {
-    transform: scale(1.05);
-    background-color: rgba(225,165,0,0.9);
+  transform: scale(1.05);
+  background-color: rgba(225, 165, 0, 0.9);
 }
 
-.upload-button6:hover .upload-icon-attendance{
-    color: whitesmoke;
+.upload-button6:hover .upload-icon-attendance {
+  color: whitesmoke;
 }
 
-.upload-button5 .excel-icon-attendance{
-    color: #27ae60;
-    font-size: 25px;
+.upload-button5 .excel-icon-attendance {
+  color: #27ae60;
+  font-size: 25px;
 }
 
-.upload-button6 .upload-icon-attendance{
-    color: #e67e22;
-    font-size: 25px;
+.upload-button6 .upload-icon-attendance {
+  color: #e67e22;
+  font-size: 25px;
 }
 
 .file-label-attendance {
-    border: 1px solid  rgb(122, 122, 122);
-    padding: 5px 10px;
-    border-radius: 5px;
-    cursor: pointer;
-    transition: all 0.5s linear;
-    color: #5b5b5b
+  border: 1px solid rgb(122, 122, 122);
+  padding: 5px 10px;
+  border-radius: 5px;
+  cursor: pointer;
+  transition: all 0.5s linear;
+  color: #5b5b5b
 }
 
 .file-label-attendance:hover,
-.file-label-attendance:hover .label-name-admin
-{
-    background-color: rgba(0,0,128,0.8);
-    color: whitesmoke;
-    border-color: navy;
+.file-label-attendance:hover .label-name-admin {
+  background-color: rgba(0, 0, 128, 0.8);
+  color: whitesmoke;
+  border-color: navy;
 }
 
 .attendance-header .file-input {
   display: none;
 }
 
-.users-count-attendance{
+.users-count-attendance {
   position: absolute;
   left: 2%;
-  font-family: "Poppins",sans-serif;
+  font-family: "Poppins", sans-serif;
   font-size: 17px;
 }
 
@@ -210,12 +185,12 @@
   left: 15px;
 }
 
-.search-input-attendance:focus{
+.search-input-attendance:focus {
   border-color: #828181;
   outline: none;
 }
 
-.search-input-res-attendance{
+.search-input-res-attendance {
   width: 250px;
   padding: 5px 0 5px 10px;
   border: 1px solid #ccc;
@@ -234,29 +209,38 @@
 
 .attendance {
   height: 60vh;
+  width: 80vw;
+  margin: auto;
   overflow-y: auto;
-  padding: 20px;
+  border-radius: 5px;
+  box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
 }
 
 .attend-1 {
   width: 100%;
   border-collapse: collapse;
-  box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+  cursor: pointer;
 }
 
 .attend-1 th,
 .attend-1 td {
-  padding: 8px;
-  border: 1px solid #ddd;
+  padding: 10px;
   text-align: left;
+  white-space: nowrap;
+}
+
+.attend-1 td:last-child {
+  font-weight: 500;
+  text-transform: capitalize;
 }
 
 .attend-1 th {
-  background-color: #333;
+  background-color: #023265;
   color: #fff;
+  font-weight: 600;
   position: sticky;
-  top: -20px;
-  /* top: 0; */
+  z-index: 1;
+  top: 0;
 }
 
 .attend-1 tr:nth-child(even) {
@@ -269,105 +253,299 @@
 
 @media only screen and (min-width:319px) and (max-width:500px) {
   .attendance-header {
-      flex-wrap: wrap;
-      display: flex;
-      flex-direction: row;
-      gap: 2px;
+    flex-wrap: wrap;
+    display: flex;
+    flex-direction: row;
+    gap: 2px;
   }
 
   .admin-slidebar {
-      display: none;
+    display: none;
   }
 
   .admin-header-attendance {
-      display: flex;
-      align-items: center;
-      justify-content: flex-end;
-      padding: 15px;
-      margin: auto;
-      width: 100% !important;
+    display: flex;
+    align-items: center;
+    justify-content: flex-end;
+    padding: 15px;
+    margin: auto;
+    width: 100% !important;
   }
 
   .attendance-header-container {
-      padding: 10px;
+    padding: 10px;
   }
 
   .attendance-header .upload-button5,
   .attendance-header .upload-button6 {
-      padding: 0 5px;
-      border-radius: 5px;
-      cursor: pointer;
+    padding: 0 5px;
+    border-radius: 5px;
+    cursor: pointer;
   }
 
   .upload-button5 .excel-icon-attendance {
-      color: #27ae60;
-      font-size: 14px;
+    color: #27ae60;
+    font-size: 14px;
   }
 
   .upload-button6 .upload-icon-attendance {
-      color: #e67e22;
-      font-size: 14px;
+    color: #e67e22;
+    font-size: 14px;
   }
 
   .file-label-attendance {
-      padding: 3px 7px;
-      font-size: 12px;
+    padding: 3px 7px;
+    font-size: 12px;
   }
 
   .tablerow-attendance {
-      font-size: 16px;
-      font-weight: bold;
+    font-size: 16px;
+    font-weight: bold;
   }
 
   .userdata-container {
-      margin-left: 0% !important;
-      height: 100vh;
+    margin-left: 0% !important;
+    height: 100vh;
   }
 
   .admin-head-search-attendance {
-      padding: 15px;
+    padding: 15px;
   }
 
   .users-count-attendance {
-      font-size: 15px;
-      position: absolute;
-      top: 23px;
-      left: 15px;
+    font-size: 15px;
+    position: absolute;
+    top: 23px;
+    left: 15px;
   }
 
   .searchbar-container-attendance {
-      display: none;
+    display: none;
   }
 
   .searchbar-res-attendance {
-      display: block;
-      text-align: center;
+    display: block;
+    text-align: center;
   }
 
   .search-input-res-attendance::placeholder {
-      color: #828181;
-      font-size: bold;
-      position: absolute;
-      left: 15px;
+    color: #828181;
+    font-size: bold;
+    position: absolute;
+    left: 15px;
   }
 
   .search-input-res-attendance:focus {
-      border-color: #828181;
-      outline: none;
+    border-color: #828181;
+    outline: none;
   }
 
   .search-input-res-attendance {
-      width: 300px;
-      padding: 6px 0 6px 10px;
-      border: 1px solid #b1b1b1;
-      border-radius: 15px;
+    width: 300px;
+    padding: 6px 0 6px 10px;
+    border: 1px solid #b1b1b1;
+    border-radius: 15px;
   }
 
   .attendance {
-      position: relative;
-      top: 15px;
-      padding: 0 5px 0 5px;
-      overflow-y: auto;
-      height: 60vh;
+    width: 90vw;
   }
+
+  .attendance-table-container {
+    position: relative;
+    top: 15px;
+    padding: 5px;
+  }
+
+}
+
+@media only screen and (min-width:501px) and (max-width:768px) {
+
+  .attendance-header {
+    display: flex;
+    align-items: center;
+    justify-content: flex-end;
+    gap: 8px;
+  }
+
+  .admin-slidebar {
+    display: none;
+  }
+
+  .admin-header-attendance {
+    display: flex;
+    align-items: center;
+    justify-content: flex-end;
+    padding: 15px;
+    margin: auto;
+    width: 100% !important;
+  }
+
+  .attendance-header .upload-button5,
+  .attendance-header .upload-button6 {
+    padding: 2px 9px;
+    border-radius: 5px;
+    cursor: pointer;
+  }
+
+  .upload-button5 .excel-icon-attendance {
+    color: #27ae60;
+    font-size: 18px;
+  }
+
+  .upload-button6 .upload-icon-attendance {
+    color: #e67e22;
+    font-size: 18px;
+  }
+
+  .file-label-attendance {
+    padding: 3px 7px;
+    font-size: 15px;
+  }
+
+  .userdata-container {
+    margin-left: 0% !important;
+    height: 100vh;
+  }
+
+  .admin-head-search-attendance {
+    padding: 15px;
+  }
+
+  .users-count-attendance {
+    font-size: 17px;
+    position: absolute;
+    top: 25px;
+    left: 30px;
+  }
+
+  .calender-btn {
+    position: relative;
+    right: 15px;
+  }
+
+  .searchbar-container-attendance {
+    display: none;
+  }
+
+  .searchbar-res-attendance {
+    display: block;
+    text-align: center;
+  }
+
+  .search-input-res-attendance::placeholder {
+    color: #828181;
+    font-size: bold;
+    position: absolute;
+    left: 15px;
+  }
+
+  .search-input-res-attendance:focus {
+    border-color: #828181;
+    outline: none;
+  }
+
+  .search-input-res-attendance {
+    width: 300px;
+    padding: 6px 0 6px 10px;
+    border: 1px solid #b1b1b1;
+    border-radius: 15px;
+    transition: width 0.4s ease, opacity 0.4s ease;
+  }
+
+  .attendance {
+    width: 90vw;
+  }
+
+  .attendance-table-container {
+    position: relative;
+    top: 15px;
+    padding: 5px;
+  }
+
+  .tablerow-attendance {
+    font-size: 19px;
+    font-weight: bold;
+  }
+
+}
+
+@media only screen and (min-width:500.11px) and (max-width:768px) {
+  .admin-header-attendance {
+    margin-top: 10px;
+  }
+
+}
+
+@media only screen and (max-width:768px) {
+  .admin-slidebar {
+    display: none;
+  }
+
+  .toggle-slidebar {
+    display: none;
+  }
+}
+
+@media only screen and (min-width:769px) and (max-width:1024px) {
+
+  .searchbar-res-attendance {
+    display: none;
+  }
+
+  .admin-head-search-attendance {
+    padding: 15px;
+  }
+
+  .calender-btn {
+    position: relative;
+    right: 5px;
+  }
+
+  .users-count-attendance {
+    font-size: 15px;
+    position: absolute;
+    top: 23px;
+    left: 25px;
+  }
+
+  .search-input-res-attendance {
+    width: 300px;
+    padding: 4px 0 4px 8px;
+    border: 1px solid #b1b1b1;
+    border-radius: 15px;
+    transition: width 0.4s ease, opacity 0.4s ease;
+  }
+
+  .attendance {
+    width: 80vw;
+  }
+
+  .attendance-table-container {
+    position: relative;
+    top: 15px;
+    padding: 5px;
+  }
+}
+
+@media only screen and (min-width:769px) and (max-width:1009px) {
+
+  .tablerow-attendance {
+    text-align: center;
+    display: flex;
+    justify-content: center;
+    font-size: 17px;
+    font-weight: bold;
+  }
+
+  .attendance {
+    width: 85vw;
+  }
+
+  .attendance-table-container {
+    position: relative;
+    top: 15px;
+    padding: 5px;
+  }
+
 }
