--- a/Insurance-app-main/src/Components/Sidebar/Sidebar.css
+++ b/Insurance-app-main/src/Components/Sidebar/Sidebar.css
@@ -86,6 +86,11 @@
     left:76%;
   }
 
+  .settings-icon{
+    position: absolute;
+    left:76%;
+  }
+
   @media only screen and (min-width:501px) and (max-width:768px){
     .sidebar-list-logout{
       display: none;
