--- a/Insurance-app-main/src/Components/AdminDashboard/AdminRegistration/Updateform/Updatedata.css
+++ b/Insurance-app-main/src/Components/AdminDashboard/AdminRegistration/Updateform/Updatedata.css
@@ -2,6 +2,12 @@
   display: block;
   margin: auto;
   color: white;
+  background-color: #333;
+}
+
+.userupdate-btn:hover {
+  color: white;
+  background-color: #494949;
 }
 
 .slider-switch {
