--- a/Insurance-app-main/src/Components/AdminDashboard/AdminRegistration/Users.css
+++ b/Insurance-app-main/src/Components/AdminDashboard/AdminRegistration/Users.css
@@ -34,12 +34,12 @@
     overflow-y: auto;
     margin: auto;
     border-radius: 5px;
-    /* box-shadow: 0 0 10px rgba(0, 0, 0, 0.1); */
     box-shadow: 0 1px 6px #d1d1d1;
 }
 
 .users-table {
     border-collapse: collapse;
+    border-spacing: 0;
     margin: auto;
     width: 100%;
     cursor: pointer;
