--- a/Insurance-app-main/src/Components/AdminDashboard/AdminRegistration/Updateform/userattendance.css
+++ b/Insurance-app-main/src/Components/AdminDashboard/AdminRegistration/Updateform/userattendance.css
@@ -203,7 +203,7 @@
   .attend-portel
   {
     border: 1.5px solid navy;
-    background-color: #dfe3e8;
+    background-color: #f2f4f6;
   }
  .button-gap
  {
