--- a/Insurance-app-main/src/Components/AdminDashboard/AdminRegistration/RegisterForm/Adminregister.css
+++ b/Insurance-app-main/src/Components/AdminDashboard/AdminRegistration/RegisterForm/Adminregister.css
@@ -18,6 +18,24 @@
     color: white;
 }
 
+.eye-icon {
+    position: absolute;
+    cursor: pointer;
+    color: #555;
+    z-index: 10;
+    right: 20px;
+    bottom: 7px;
+}
+
+ input[type="password"]::-ms-reveal, 
+ input[type="password"]::-webkit-contacts-auto-fill-button {
+    display: none !important;
+}
+
+.password-wrapper{
+    position: relative;
+}
+
 .user-checkbox{
     display: flex;
     justify-content: space-around; 
