--- a/Insurance-app-main/src/Components/Login/PasswordInput.css
+++ b/Insurance-app-main/src/Components/Login/PasswordInput.css
@@ -20,3 +20,23 @@
 .password-input input[type="password"]::-webkit-contacts-auto-fill-button {
     display: none !important;
 }
+
+.password-input .MuiInputBase-input {
+    color: #fff; 
+}
+
+.password-input .MuiIconButton-root {
+    color: #fff;
+}
+
+/* .password-input .MuiInput-underline:before {
+  border-bottom: 2px solid #fff;
+}
+
+.password-input .MuiInput-underline:hover:before {
+  border-bottom: 2px solid #fff;
+}
+
+.password-input .MuiInput-underline:after {
+  border-bottom: 2px solid #fff;
+} */
