--- a/Insurance-app-main/src/Components/Register/Register.css
+++ b/Insurance-app-main/src/Components/Register/Register.css
@@ -48,6 +48,10 @@
     color:#fff; 
 }
 
+.form-control-register .MuiInputBase-input{
+    color: #fff;
+}
+
 /* .form-control-register{
     width: 100%;
     padding: 10px 5px;
